# PEA

./: .gitignore  BST.cpp  BST.h  BranchAndBound.cpp  BranchAndBound.h  BruteForce.cpp  BruteForce.h  CMakeLists.txt  Dynamic.cpp  Dynamic.h  Matrix.cpp  Matrix.h  Menu.cpp  Menu.h  Solution.cpp  Solution.h  Tests.cpp  Tests.h  TestyAutomatyczne.cpp  TestyAutomatyczne.h  main.cpp
